Remove most styles and make section titles red

--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -23,84 +23,42 @@ $magenta5: 	rgba(255, 0, 255, .5);
 $magenta3: 	rgba(255, 0, 255, .3);
 
 .home-landing-grid {
-	position: relative;
 	display: grid;
-	align-items: center;
-	justify-content: center;
+	justify-content: start;
+	align-items: end;
+	overflow: hidden;
 	height: 100vh;
 	width: 100%;
-	background-image: linear-gradient(to bottom, rgb(42, 0, 255), $purple 30%, $magenta);
+//	background-image: linear-gradient(to top left, transparent 60%, white 60%, white), url("img/low-poly-white.svg"), linear-gradient(to bottom, rgb(42, 0, 255), $purple 30%, $magenta);
 }
 
 .home-title-wrapper {
 	position: relative;
-}
-
-.home-title__text {
-	position: relative;
-	font-family: "Righteous";
-	font-size: 6em;
-	line-height: 1;
-	text-align: center;
-	text-transform: uppercase;
-//	color: white; /* for testing layers */
-	z-index: 1;
-//	text-shadow: 0 0 2px $magenta5;
-//	transform: translate(0, 8px);
-	span {
-	//	display: none;
-		line-height: 1;
-	}
-}
-
-.home-dots-wrapper {
-	position: absolute;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-//	grid-gap: 4px;
-	height: 100vh;
-	width: 100%;
-	overflow: hidden;
-	
-}
-
-.home-dots__dot {
-	position: relative;
-	height: 100%;
-	width: 100%;
-	background-color: rgba(0,0,0,.7);
-//	border: 1px solid red;
-	span {
-	//	content: '';
+	font-family: "Raleway";
+	font-size: 7em;
+	font-weight: 700;
+//	text-transform: uppercase;
+	line-height: .8;
+//	border: 4px solid magenta; //hsla(330, 100%, 50%, 1);
+	transform: translate(1em, -1em);
+	&::after {
+		content: '';
 		position: absolute;
-		right: 50%;
-		bottom: 50%;
-		display: block;
-		height: 6px;
-		width: 6px;
-		transform: translate(50%, 50%);
-		border-radius: 50%;
-	//	background-color: rgba(255,255,255,.7);
-		background-clip: border-box;
-		&::after {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			display: block;
-			height: 100%;
-			width: 100%;
-			border-radius: 50%;
-			background-image: linear-gradient(to bottom, rgba(42, 0, 255, 1), $purple 30%, $magenta);
-			background-size: 100vw 100vh;
-		//	background-position: ** this is where things get tricksy but it's gotta be possible... **
-
-		}
-	//	background-clip: border-box;
-		// set bg of pseudo elem to be a gradient of identical size as real bg
-		// can't think of another way to do it
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+		transform: translate(.5em, .25em);
+//		background-image: linear-gradient(to left, rgb(42, 0, 255), $purple 30%, $magenta);
+	}
+	.home-title__text {
+		position: relative;
+	//	transform: translate(-.25em, 0);
 	}
 }
+
+
 
 /* Main Content */
 
@@ -115,12 +73,18 @@ $magenta3: 	rgba(255, 0, 255, .3);
 						 "make gis"
 						 "learn learn"
 						 "events events"
-						 "listserv contact2"
-						 "blog blog"						 
+						 "blog contact2"
+						 "blog listserv"						 
 						 "people projects"
 						 "origins origins"			 
 						 "charter colophon";
 	grid-auto-rows: minmax(25vh, auto);
+}
+
+/* All section titles: */
+
+[class*="__title"] {
+	color: red;
 }
 
 /* Hero: */
