--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -62,69 +62,42 @@ body {
 
 /* Background colors: */
 .home-landing-grid {
-  position: relative;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  justify-content: start;
+  align-items: end;
+  overflow: hidden;
   height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(to bottom, #2a00ff, #7f00ff 30%, magenta); }
+  width: 100%; }
 
 .home-title-wrapper {
-  position: relative; }
-
-.home-title__text {
   position: relative;
-  font-family: "Righteous";
-  font-size: 6em;
-  line-height: 1;
-  text-align: center;
-  text-transform: uppercase;
-  z-index: 1; }
-  .home-title__text span {
-    line-height: 1; }
-
-.home-dots-wrapper {
-  position: absolute;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  height: 100vh;
-  width: 100%;
-  overflow: hidden; }
-
-.home-dots__dot {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.7); }
-  .home-dots__dot span {
+  font-family: "Raleway";
+  font-size: 7em;
+  font-weight: 700;
+  line-height: .8;
+  transform: translate(1em, -1em); }
+  .home-title-wrapper::after {
+    content: '';
     position: absolute;
-    right: 50%;
-    bottom: 50%;
-    display: block;
-    height: 6px;
-    width: 6px;
-    transform: translate(50%, 50%);
-    border-radius: 50%;
-    background-clip: border-box; }
-    .home-dots__dot span::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: block;
-      height: 100%;
-      width: 100%;
-      border-radius: 50%;
-      background-image: linear-gradient(to bottom, #2a00ff, #7f00ff 30%, magenta);
-      background-size: 100vw 100vh; }
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transform: translate(0.5em, 0.25em); }
+  .home-title-wrapper .home-title__text {
+    position: relative; }
 
 /* Main Content */
 .home-main-content {
   position: relative;
   display: grid;
-  grid-template-areas: "hero hero" "faq contact" "faq grads" "hours floor" "make gis" "learn learn" "events events" "listserv contact2" "blog blog"						  "people projects" "origins origins"			  "charter colophon";
+  grid-template-areas: "hero hero" "faq contact" "faq grads" "hours floor" "make gis" "learn learn" "events events" "blog contact2" "blog listserv"						  "people projects" "origins origins"			  "charter colophon";
   grid-auto-rows: minmax(25vh, auto); }
+
+/* All section titles: */
+[class*="__title"] {
+  color: red; }
 
 /* Hero: */
 .home__hero {
