--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -39,22 +39,9 @@ $magenta3: 	rgba(255, 0, 255, .3);
 	font-weight: 700;
 //	text-transform: uppercase;
 	line-height: .8;
-//	border: 4px solid magenta; //hsla(330, 100%, 50%, 1);
 	transform: translate(1em, -1em);
-	&::after {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		transform: translate(.5em, .25em);
-//		background-image: linear-gradient(to left, rgb(42, 0, 255), $purple 30%, $magenta);
-	}
 	.home-title__text {
 		position: relative;
-	//	transform: translate(-.25em, 0);
 	}
 }
 
@@ -92,7 +79,55 @@ $magenta3: 	rgba(255, 0, 255, .3);
 .home__hero {
 	grid-area: hero;
 	position: relative;
-	height: 50vh;
+	max-width: 900px;
+	justify-self: end;
+	text-align: center;
+//	border: 1px solid black;
+}
+
+.home-hero__title {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 3em 1fr;
+	grid-template-rows: repeat(4, auto);
+	margin: 1em 0;
+//	font-family: "Inconsolata", monospace;
+	font-size: 3rem;
+	font-weight: 900;
+	line-height: 1;
+//	text-transform: uppercase;
+	color: black;
+	span {
+//		border: 1px solid blue;
+	}
+	span:nth-of-type(1) {
+		grid-column: span 4;
+		grid-row: 1;
+	//	font-size: 1.25em;
+	//	text-align: left;
+	}
+	span:nth-of-type(2) {
+		grid-column: 1;
+		grid-row: 2;
+	//	justify-self: end;
+		margin-top: 1em;
+		text-align: left;
+	}
+	span:nth-of-type(3) {
+		grid-column: 2;
+		grid-row: 3;
+		margin: 1em 0;
+		text-align: left;
+	}
+	span:nth-of-type(4) {
+		grid-column: 3;
+		grid-row: 4;
+		text-align: left;
+	}
+}
+
+.home-hero__text {
+
 }
 
 /* Contact prompt: */
