--- a/theme-testing/_landing.scss
+++ b/theme-testing/_landing.scss
@@ -89,3 +89,47 @@ $magenta3: 	rgba(255, 0, 255, .3);
 		// can't think of another way to do it
 	}
 }
+
+
+/* 2/1/18 - experimental grid for hero text */
+
+.home-hero__title {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 3em 1fr;
+	grid-template-rows: repeat(4, auto);
+	margin: 1em 0;
+//	font-family: "Inconsolata", monospace;
+	font-size: 3rem;
+	font-weight: 900;
+	line-height: 1;
+//	text-transform: uppercase;
+	color: black;
+	span {
+//		border: 1px solid blue;
+	}
+	span:nth-of-type(1) {
+		grid-column: span 4;
+		grid-row: 1;
+	//	font-size: 1.25em;
+	//	text-align: left;
+	}
+	span:nth-of-type(2) {
+		grid-column: 1;
+		grid-row: 2;
+	//	justify-self: end;
+		margin-top: 1em;
+		text-align: left;
+	}
+	span:nth-of-type(3) {
+		grid-column: 2;
+		grid-row: 3;
+		margin: 1em 0;
+		text-align: left;
+	}
+	span:nth-of-type(4) {
+		grid-column: 3;
+		grid-row: 4;
+		text-align: left;
+	}
+}
