--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -29,19 +29,33 @@ $magenta3: 	rgba(255, 0, 255, .3);
 	overflow: hidden;
 	height: 100vh;
 	width: 100%;
+	padding-left: 4.167%;
+	@media screen and (min-width: 600px) {
+		padding-left: 8.33%;
+	}
 //	background-image: linear-gradient(to top left, transparent 60%, white 60%, white), url("img/low-poly-white.svg"), linear-gradient(to bottom, rgb(42, 0, 255), $purple 30%, $magenta);
 }
 
 .home-title-wrapper {
 	position: relative;
-	font-family: "Raleway";
-	font-size: 7em;
-	font-weight: 700;
-//	text-transform: uppercase;
-	line-height: .8;
-	transform: translate(1em, -1em);
+	font-family: "Oswald", sans-serif;
+	font-size: 4em;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: .9;
+	transform: translate(0, -1em);
 	.home-title__text {
 		position: relative;
+	}
+	/* NB: need to move placement of words on smaller screens */
+	@media screen and (min-width: 600px) {
+		font-size: 5em;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 6em;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 7em;
 	}
 }
 
@@ -78,56 +92,60 @@ $magenta3: 	rgba(255, 0, 255, .3);
 
 .home__hero {
 	grid-area: hero;
+//	justify-self: end;
 	position: relative;
-	max-width: 900px;
-	justify-self: end;
-	text-align: center;
-//	border: 1px solid black;
+//	max-width: 900px;
+	font-size: 1.75rem;
+	margin-bottom: 1em;
+	line-height: 1;
+	@media screen and (min-width: 600px) {
+	//	font-size: 1.5rem;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 2rem;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 2.5rem;
+	}
 }
 
 .home-hero__title {
 	position: relative;
-	display: grid;
-	grid-template-columns: 1fr 3em 1fr;
-	grid-template-rows: repeat(4, auto);
-	margin: 1em 0;
-//	font-family: "Inconsolata", monospace;
-	font-size: 3rem;
-	font-weight: 900;
-	line-height: 1;
+//	font-family: "Oswald", sans-serif;
+	font-weight: 200;
 //	text-transform: uppercase;
-	color: black;
-	span {
-//		border: 1px solid blue;
-	}
-	span:nth-of-type(1) {
-		grid-column: span 4;
-		grid-row: 1;
-	//	font-size: 1.25em;
-	//	text-align: left;
-	}
-	span:nth-of-type(2) {
-		grid-column: 1;
-		grid-row: 2;
-	//	justify-self: end;
-		margin-top: 1em;
-		text-align: left;
-	}
-	span:nth-of-type(3) {
-		grid-column: 2;
-		grid-row: 3;
-		margin: 1em 0;
-		text-align: left;
-	}
-	span:nth-of-type(4) {
-		grid-column: 3;
-		grid-row: 4;
-		text-align: left;
+	color: black; /* all titles are red rn */
+	margin-left: 4.167%;
+	margin-right: 4.167%;
+	margin-bottom: 1em;
+//	margin-left: 8.33%;
+	@media screen and (min-width: 600px) {
+		margin-left: 8.33%;
+		margin-right: 8.33%;
 	}
 }
 
 .home-hero__text {
-
+	margin-left: 4.167%;
+	margin-right: 4.167%;
+	font-weight: 200;
+	span {
+		display: block;
+		font-weight: 700;
+	}
+	.if-big {
+		display: none !important;
+	}
+	@media screen and (min-width: 600px) {
+		margin-left: 8.33%;
+		margin-right: 8.33%;
+		
+	}
+	@media screen and (min-width: 1200px) {
+		.if-big {
+			display: initial !important;
+		}
+	}
 }
 
 /* Contact prompt: */
