Set content columns to equal width

--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -98,6 +98,7 @@ body {
 .home-main-content {
   position: relative;
   display: grid;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas: "hero hero" "faq contact" "faq grads" "hours floor" "make gis" "learn learn" "events events" "blog contact2" "blog listserv"						  "people projects" "origins origins"			  "charter colophon";
   grid-auto-rows: minmax(25vh, auto); }
 
