--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -62,8 +62,8 @@ body {
 
 /* Background colors: */
 .home-landing-grid {
+  position: relative;
   display: grid;
-  justify-content: start;
   align-items: end;
   overflow: hidden;
   height: 100vh;
@@ -80,8 +80,8 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   line-height: .9;
-  transform: translate(0, -1em);
-  /* NB: need to move placement of words on smaller screens */ }
+  /* NB: need to move placement of words on smaller screens */
+  border-bottom: 6px solid magenta; }
   .home-title-wrapper .home-title__text {
     position: relative; }
   @media screen and (min-width: 600px) {
@@ -93,6 +93,28 @@ body {
   @media screen and (min-width: 1024px) {
     .home-title-wrapper {
       font-size: 7em; } }
+
+.home-landing__subtitle {
+  position: relative;
+  width: 100%;
+  align-self: start;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 200;
+  line-height: 1;
+  padding-top: 1em; }
+  @media screen and (min-width: 600px) {
+    .home-landing__subtitle {
+      font-size: 1.75rem;
+      padding-top: 1.5em; } }
+  @media screen and (min-width: 768px) {
+    .home-landing__subtitle {
+      font-size: 2rem;
+      padding-top: 0;
+      align-self: center; } }
+  @media screen and (min-width: 1024px) {
+    .home-landing__subtitle {
+      font-size: 2rem; } }
 
 /* Main Content */
 .home-main-content {
