--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -23,8 +23,9 @@ $magenta5: 	rgba(255, 0, 255, .5);
 $magenta3: 	rgba(255, 0, 255, .3);
 
 .home-landing-grid {
+	position: relative;
 	display: grid;
-	justify-content: start;
+//	justify-content: start;
 	align-items: end;
 	overflow: hidden;
 	height: 100vh;
@@ -43,7 +44,9 @@ $magenta3: 	rgba(255, 0, 255, .3);
 	font-weight: 600;
 	text-transform: uppercase;
 	line-height: .9;
-	transform: translate(0, -1em);
+//	padding-bottom: .5em;
+	//transform: translate(0, -1em);
+//	color: magenta;
 	.home-title__text {
 		position: relative;
 	}
@@ -56,6 +59,30 @@ $magenta3: 	rgba(255, 0, 255, .3);
 	}
 	@media screen and (min-width: 1024px) {
 		font-size: 7em;
+	}
+	border-bottom: 6px solid magenta;
+}
+
+.home-landing__subtitle {
+	position: relative;
+	width: 100%;
+	align-self: start;
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	font-weight: 200;
+	line-height: 1;
+	padding-top: 1em;
+	@media screen and (min-width: 600px) {
+		font-size: 1.75rem;
+		padding-top: 1.5em;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 2rem;
+		padding-top: 0;
+		align-self: center;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 2rem;
 	}
 }
 
