--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,400,600|Inconsolata:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{ "styles.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
