Change sass import '_sass/navbar' -> 'navbar'

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css');
 
-@import "_sass/navbar";
+@import "navbar";
 // @import "_sass/amanda";
 
 * {
