Change section title font to Oswald bold

--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -129,7 +129,9 @@ body {
 
 /* All section titles: */
 [class*="__title"] {
-  color: red; }
+  font-family: "Oswald", sans-serif;
+  font-size: 2rem;
+  font-weight: 600; }
 
 /* Hero: */
 .home__hero {
