--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -100,7 +100,9 @@ body {
 /* All section titles: */
 
 [class*="__title"] {
-	color: red;
+	font-family: "Oswald", sans-serif;
+	font-size: 2rem;
+	font-weight: 600;
 }
 
 /* Hero: */
