--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -142,8 +142,8 @@ body {
 		display: none !important;
 	}
 	@media screen and (min-width: 600px) {
-		margin-left: 8.33%;
-		margin-right: 8.33%;
+//		margin-left: 8.33%;
+//		margin-right: 8.33%;
 		
 	}
 	@media screen and (min-width: 1200px) {
