Add top margin to all title sections

--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -130,6 +130,7 @@ body {
 /* All section titles: */
 [class*="__title"] {
   margin-bottom: .5em;
+  margin-top: 1em;
   font-family: "Oswald", sans-serif;
   font-size: 1.75rem;
   font-weight: 600;
