--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -101,6 +101,7 @@ body {
 
 [class*="__title"] {
 	margin-bottom: .5em;
+	margin-top: 1em;
 	font-family: "Oswald", sans-serif;
 	font-size: 1.75rem;
 	font-weight: 600;
