--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -112,6 +112,22 @@ body {
 	}
 }
 
+/* All homepage links: */
+
+[class*="home-"] {
+	a {
+		text-decoration: none;
+		color: black;
+		border-bottom: 2px solid magenta;
+		background-color: transparent;
+		-webkit-transition: background-color .3s;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			background-color: magenta;
+		}
+	}
+}
+
 /* Hero: */
 
 .home__hero {
