--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -58,7 +58,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Raleway", sans-serif; }
+  font-family: "Raleway", sans-serif;
+  line-height: 1.375; }
 
 .home-landing-grid {
   position: relative;
