--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -9,7 +9,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Raleway", sans-serif;
-	line-height: 1.375;
+	line-height: 1.5; // if 16px, = 24px line height
 }
 
 .home-landing-grid {
@@ -119,6 +119,7 @@ body {
 
 [class*="home-"] {
 	a {
+		font-family: "base-mono-narrow", monospace;
 		text-decoration: none;
 		color: black;
 		border-bottom: 2px solid magenta;
@@ -134,13 +135,16 @@ body {
 /* All call-to-action buttons: */
 
 [class*="__cta"] {
+	position: relative;
+	margin-top: 1em;
 	a {
 		display: inline-block;
-		padding: .25em .5em;
+		padding: .25rem .5em;
 		margin-top: 4px;
 		font-size: 1.5rem;
-		font-family: "Oswald", sans-serif;
-	//	font-weight: 200;
+	//	font-family: "Inconsolata", monospace;
+		font-family: "base-mono-wide", monospace;
+		font-weight: 700;
 		line-height: 1;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -162,8 +166,9 @@ body {
 .home-hero__text {
 //	margin-left: 4.167%;
 //	margin-right: 4.167%;
-	font-size: 1.75rem;
-	font-weight: 200;
+//	font-family: "base-mono-narrow", monospace;
+	font-size: 1.5rem;
+	font-weight: 300 !important;
 	line-height: 1;
 	margin-bottom: 1em;
 	padding-bottom: 1em;
@@ -182,20 +187,15 @@ body {
 
 .home__contact--1 {
 	grid-area: contact;
+	font-size: 18px;
+//	font-family: "base-mono-narrow", monospace;
+//	font-family: "base-mono-wide", monospace;
+//	font-weight: 300 !important;
+	line-height: 24px;
 }
 
 .home-contact__cta {
-	a {
-		text-decoration: none;
-		color: black;
-		border-bottom: 2px solid magenta;
-		background-color: transparent;
-		-webkit-transition: background-color .3s;
-		transition: background-color .3s;
-		&:hover, &:focus {
-			background-color: magenta;
-		}
-	}
+
 }
 
 /* FAQ corner/link: */
@@ -205,15 +205,22 @@ body {
 }
 
 .home-faq__content {
-//	border: 1px solid red;
+
 }
 
 .home-faq__subtitle {
 	padding-bottom: 1em;
+	font-size: 18px;
+	line-height: 24px;
+	padding-right: 8.33%;
 }
 
 .home-faq__questions {
 	position: relative;
+	font-family: "base-mono-narrow", monospace;
+	font-size: 18px; //1.25rem
+//	font-weight: 300 !important;
+//	line-height: 24px;
 	div {
 		position: relative;
 		margin-bottom: 1em;
@@ -226,11 +233,12 @@ body {
 			display: block;
 			height: 6px;
 			width: 6px;
-			background-color: cyan;
+		//	background-color: cyan;
 			border-radius: 50%;
 
 		}
 		a {
+			line-height: 1.5;
 			text-decoration: none;
 			color: black;
 			border-bottom: 2px solid cyan;
@@ -247,37 +255,26 @@ body {
 .home-faq__cta {
 	position: relative;
 	margin-top: 1em;
-	a {
-		display: inline-block;
-		padding: .25em .5em;
-		margin-top: 4px;
-		font-size: 1.5rem;
-		font-family: "Oswald", sans-serif;
-	//	font-weight: 200;
-		line-height: 1;
-		text-decoration: none;
-		text-transform: uppercase;
-		color: cyan;
-		border: 2px solid cyan;
-	}
 }
 
 /* Grad students: */
 
 .home__students {
 	grid-area: grads;
+	font-size: 18px;
+	line-height: 24px;
 	a {
-		border-bottom: 2px solid rgba(37,34,255,1);
+		border-bottom: 2px solid rgba(0,47,255,1);
 		&:hover, &:focus {
-			background-color: rgba(37,34,255,1);
+			background-color: rgba(0,47,255,1);
 		}
 	}
 }
 
 .home-students__cta {
 	a {
-		color: rgba(37,34,255,1);
-		border: 2px solid rgba(37,34,255,1);
+		color: rgba(0,47,255,1);
+		border: 2px solid rgba(0,47,255,1);
 		&:hover, &:focus {
 			background-color: transparent;
 		}
@@ -294,6 +291,15 @@ body {
 
 .home__office-hours {
 	grid-area: hours;
+	font-size: 18px;
+	padding-right: 8.33%;
+}
+
+.home-hours__when {
+	font-family: "base-mono-narrow";
+	font-size: 20px;
+	line-height: 24px; // 1.5rem;
+	margin-bottom: 24px;
 }
 
 /* Makerspace corner: */
