--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -253,7 +253,17 @@ body {
 
 /* Floor diagram: (esp for office hours) */
 .home__floor-diagram {
-  grid-area: floor; }
+  grid-area: floor;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.75rem; }
+  .home__floor-diagram div img {
+    display: inline-block;
+    margin-top: 1em; }
+  @media screen and (min-width: 600px) {
+    .home__floor-diagram {
+      font-size: 2rem; } }
 
 /* Office hours: */
 .home__office-hours {
