--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -206,7 +206,8 @@ body {
 .home-faq__questions {
   position: relative;
   font-family: "base-mono-narrow", monospace;
-  font-size: 18px; }
+  font-size: 18px;
+  line-height: 24px; }
   .home-faq__questions div {
     position: relative;
     margin-bottom: 1em; }
@@ -270,6 +271,7 @@ body {
 .home__office-hours {
   grid-area: hours;
   font-size: 18px;
+  line-height: 24px;
   padding-right: 8.33%; }
 
 .home-hours__when {
@@ -280,11 +282,45 @@ body {
 
 /* Makerspace corner: */
 .home__makerspace-corner {
-  grid-area: make; }
+  grid-area: make;
+  padding-right: 8.33%; }
+
+.home-makerspace__hours {
+  position: relative;
+  border: 4px solid magenta;
+  font-family: "base-mono-narrow", monospace;
+  font-size: 20px;
+  text-align: right;
+  margin-top: calc(2em + 4px);
+  padding: .5em 1em; }
+  .home-makerspace__hours div {
+    position: absolute;
+    font-family: "Oswald", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: left;
+    line-height: 1;
+    transform: translate(-1em, calc(-1.5em - 4px)); }
+  .home-makerspace__hours span {
+    float: left;
+    color: magenta; }
+
+.home-makerspace__text {
+  font-size: 18px;
+  line-height: 1.5rem;
+  margin-top: 1.5rem; }
+
+.home-makerspace__cta a {
+  border-color: magenta;
+  color: magenta; }
 
 /* GIS corner: */
 .home__gis-corner {
-  grid-area: gis; }
+  grid-area: gis;
+  padding-left: 8.33%;
+  font-size: 18px;
+  line-height: 24px; }
 
 /* Starter kit corner: */
 .home__learn {
